--- a/index.html
+++ b/index.html
@@ -1,1 +1,65 @@
+<!DOCTYPE html>
+<html lang="en" style="--c-bg: hsl(0, 0%, 90%); --c-text: hsl(0, 0%, 10%); --vw: 6.95px; --vh: 7.140000000000001px; --vmax: 7.140000000000001px; --vmin: 6.95px;">
 
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Gabarito&display=swap');
+</style>
+
+<head>
+    <link rel="stylesheet" href="portfolio_website.css">
+    <script src="portfolio_website.js"></script>
+</head>
+    <body>
+    <div id="Page" class="pos-fixed">
+      <div class="mask pos-fixed" id="Mask">
+        <div class="mask_top"></div>
+        <div class="mask_bottom"></div>
+      </div>
+      <div class="frame pos-fixed" id="Frame">
+        <div class="frame-line frame-line-left"></div>
+        <div class="frame-line frame-line-right"></div>
+        <div class="frame-line frame-line-top"></div>
+        <div class="frame-line frame-line-bottom"></div>
+      </div>
+      <header class="main-header pos-fixed" id="MainHeader">
+        <h1 class="main-header-title">Kainani Dowell</h1>
+        <p class="main-header-subtitle">Software Engineer & Computational Linguist</p>
+        <ul class="main-header-nav">
+          <li><a class="nav-text">Home</a></li>
+          <li><a class="nav-text">Projects</a></li>
+          <li><a class="nav-text">Contact</a></li>
+        </ul>
+      </header>
+      <main class="content pos-fixed" id="Content">
+        <div class="content-inner">
+          <section class="page" data-page="">
+            <div class="page-content home">
+              <p class="home-about-me">
+                <span class="d-block">Hi,</span>
+                <span class="d-block">my name is Kainani Dowell!</span>
+                <br>
+                <span class="d-block">I am currently studying</span>
+                <span class="d-block">Linguistics and Computer Science</span>
+                <span class="d-block">at UCLA (University of California Los Angeles).</span>
+                <br>
+                <span class="d-block">I have a mission</span>
+                <span class="d-block">to be in the forefront of</span>
+                <span class="d-block">natural language processing,</span>
+                <span class="d-block">machine learning,</span>
+                <span class="d-block">and artificial intelligence.</span>
+              </p>
+            </div>
+          </section>
+          <section class="page" data-page="projects"></section>
+          <section class="page" data-page="contact">
+            <div class="page-content contact">
+              <a class="link d-block" href="resume.pdf" target="_blank">resume🔗</a>
+              <a class="link d-block" href="https://www.linkedin.com/in/kainani-dowell-087128264/" target="_blank">linkedin🔗</a>
+              <a class="link d-block" href="https://github.com/KainaniD" target="_blank">github🔗</a>
+            </div>
+          </section>
+        </div>
+      </main>
+    </div>
+    </body>
+</html>
