--- a/index.html
+++ b/index.html
@@ -50,7 +50,18 @@
               </p>
             </div>
           </section>
-          <section class="page" data-page="projects"></section>
+          <section class="page" data-page="projects">
+            <div class="page-content projects">
+              <a class="project-link link" href="https://editor.p5js.org/kainani/sketches/4QP_DVJs-">
+              <span class="project-header d-block">BOPP</span>
+              <span class="project-subheader d-block">a simple two player game</span>
+              </a>
+              <a class="project-link link" href="https://editor.p5js.org/kainani/sketches/P0PE2npKJ">
+                <span class="project-header d-block">Combo Hunter</span>
+                <span class="project-subheader d-block">a fast paced single player physics based game</span>
+              </a>
+            </div>
+          </section>
           <section class="page" data-page="contact">
             <div class="page-content contact">
               <a class="link d-block" href="resume.pdf" target="_blank">resume🔗</a>
