--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="--c-bg: hsl(0, 0%, 90%); --c-text: hsl(0, 0%, 10%); --vw: 6.95px; --vh: 7.140000000000001px; --vmax: 7.140000000000001px; --vmin: 6.95px;">
-
+<html lang="en" style="--c-bg: hsl(0, 0%, 90%); --c-text: hsl(0, 0%, 10%);">
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Gabarito&display=swap');
 </style>
